Adds Feed modification and creation.
